Part II - Core Concepts/05/svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: sung
spec:
  ports:
  - port: 80
    targetPort: 8080
  selector:
    app: kubia
