Part II - Core Concepts/05/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: sung
spec:
  rules:
  - host: sung.example.com
    http:
      paths:
      - path: /
        backend:
          serviceName: sung
          servicePort: 80
